fixed button styling and size in header, still trying to fix card wrapping

--- a/style.css
+++ b/style.css
@@ -104,8 +104,7 @@ button {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-left: 15%;
-    margin-right: 15%;
+    flex-wrap: nowrap;
 }
 
 .information-title {
@@ -118,8 +117,9 @@ button {
     display: flex;
     justify-content: space-around;
     gap: 50px;
-    margin-left: 15%;
-    margin-right: 15%;
+    padding-left: 15%;
+    padding-right: 15%;
+    flex-wrap: nowrap;
 }
 
 .card {
@@ -139,6 +139,7 @@ button {
 .card p {
     width: 150px;
     text-align: center;
+    color: #1F2937;
 }
 
 .quote-section {
